# myCopilot

./: CMakeLists.txt  README.md
assets/: resource.rc  script.js
include/: config.hpp  resource.hpp  utils.hpp  webview.hpp
src/: main.cpp  utils.cpp
